# @markup rdoc
# @title Change Log
# @author Robert Sharp

== History

[jeckyl-0.3.0 29-Mar-2013]

  Beta test. Jeckyl can now process command switches for the same options using optparse.
  Helper methods moved to a separate module and a couple of new ones added (a_number, a_positive_number).
  A to_s method added to make it easier to display values.

[jeckyl-0.2.7 15-Nov-2012]

  Change base directory for configs to /etc/jerbil consistent with the main jerbil gem

[jeckyl-0.2.6 25-Oct-2012]

  Revert to /etc/jermine while working through changes to other gems

[jeckyl-0.2.5 25-Oct-2012]

  Clean up unwanted git files and update README links (e.g. rubydoc)

[jeckyl-0.2.4 25-Oct-2012]

  Deprecate ConfigRoot constant in favour of Jeckyl.config_dir, which will pick up
  the environment variable JECKYL_CONFIG_DIR if set or use '/etc/jeckyl'. This is a
  change from the old, quirky default of '/etc/jermine'. Tweak to 'jeckyl markdown'.

[jeckyl-0.2.3 21-Sep-2012]

  Add references to online docs etc to usage.

[jeckyl-0.2.2 21-Sep-2012]

  Add readme command to jeckyl to display README.md (when included properly)

[jeckyl-0.2.1 20-Sep-2012]

  Tidy up documentation.

[jeckyl-0.2.0 19-Sep-2012]

  Clean up code and documentation and enable parameter methods to be separated by class.

[jeckyl-0.1.11 23-Jul-2012]

  Added comment command to jeckyl to produce just comments for yard

[jeckyl-0.1.10 18-June-2012]

  Added complement and intersection methods and deprecated new Jeckyl::Service in favour of
  including these options with the services they relate to (Jelly::Options, for example). Tidyied
  up documentation.

[jeckyl-0.1.9 6-June-2012]

  Included require 'jeckyl' in service.rb

[jeckyl-0.1.8 2-June-2012]

  Made sure Jeckyl::Service inherits from Jeckyl::Options!

[jeckyl-0.1.7 1-June-2012]

  Added Jeckyl::Service as a class which already defines all of the config options needed
  for a Jerbil::Service

[jeckyl-0.1.6 19-Dec-2011]
